--- a/AudibELLE-2024/.gitignore
+++ b/AudibELLE-2024/.gitignore
@@ -2,13 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-[Ll]ibrary/
-[Tt]emp/
-[Oo]bj/
-[Bb]uild/
-[Bb]uilds/
-[Ll]ogs/
-[Uu]ser[Ss]ettings/
+/AudibElle-2024/[Ll]ibrary/
+/AudibElle-2024/[Tt]emp/
+/AudibElle-2024/[Oo]bj/
+/AudibElle-2024/[Bb]uild/
+/AudibElle-2024/[Bb]uilds/
+/AudibElle-2024/[Ll]ogs/
+/AudibElle-2024/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
